# mri_compression

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
mri_compressor/: README.md  __init__.py  benchmark.py  config.py  data_utils.py  model_utils.py  pipeline.py
mri_compressor/archive/: main.py  studies_core.py  studies_extended.py  studies_new.py  studies_novel.py  studies_novel_part1.py  studies_novel_part2.py  studies_structural.py  study_domains.py  visualize.py  visualize_new.py  visualize_novel.py
mri_compressor/archive/compression_v1/: baselines.py  compressor.py  diagnostic.py  profiles.py  run.py
mri_compressor/archive/compression_v2/: compressor.py  diagnostics.py  evaluate.py  neuron_recycling.py  run.py
mri_compressor/compression/: __init__.py  _utils.py  compressor.py  diagnostician.py  evaluate.py  neuron_recycling.py  prescription.py
mri_compressor/compression/operations/: __init__.py  attention_pruner.py  dead_removal.py  depth_pruner.py  imprinting.py  low_rank.py  neuron_merge.py  reconstructor.py  static_fold.py  (+2 more)
mri_compressor/mri/: __init__.py  runner.py  studies_activation.py  studies_advanced.py  studies_attention.py  studies_cross.py  studies_domain.py  studies_domain_compression.py  studies_domain_importance.py  studies_gates.py  studies_geometry.py  studies_hybrid_attention.py  studies_importance.py  studies_layer.py  studies_neuron_health.py  studies_nextgen.py  studies_structure.py  summary.py  visualize.py
tests/: conftest.py  test_api.py  test_config.py  test_diagnostician.py  test_operations.py  test_prescription.py
