[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mri-compressor"
version = "0.1.0"
description = "Diagnostic-guided LLM compression without quantization"
readme = "mri_compressor/README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "scipy>=1.10.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["mri_compressor*"]
exclude = ["archive*"]
